# Redshift_Hunter

./: LICENSE.md  README.md  crosscor.py  crosscorrelation.py  project1.ipynb  pyproject.toml  setup.py  spec-1678-53433-0431.fits  spectra.ipynb  spectra.py
Mywish/: __init__.py
Redshift_Hunter/: crosscor.py
classification/: bpt.py  classify.py  confidence.py  ratios.py
redshift_hunter/: spectra.py  test.py
redshift_hunter/classification/: __init__.py  agn.py  classify.py  constants.py  identify_lines.py
specZfind/: cross_correlate.py  test_pipeline.py
speczfind/: cli.py  galaxyclassifier.py
speyczfind/: __init__.py  cli.py  spectra.py
