[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Redshift_Hunter"
version = "0.0.1"
description = "A package to find the redshift and the type of galaxy from any FITS file."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "numpy",
"astropy",
"scipy",
"matplotlib"]


