[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speczfind"
version = "0.0.1"
description = "A package to find the redshift and the type of galaxy from any FITS file."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "astropy",
    "scipy",
    "matplotlib"
]

# This registers the terminal command mapping
[project.entry-points."console_scripts"]
speczfind = "speczfind.cli:main"

# Explicitly guide setuptools to find your inner folder
[tool.setuptools.packages.find]
where = ["."]
include = ["speczfind*"]
